// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageDialog rendering with base props 1`] = `null`;

exports[`MessageDialog rendering with isLarge false 1`] = `
[
  <div
    className="lab-dialog-overlay"
    onClick={[Function]}
    role="presentation"
  />,
  <div
    className="lab-dialog lab-dialog--message
            "
  >
    <div
      aria-modal="true"
      className="lab-dialog__content lab-dialog__content--message"
      role="dialog"
    >
      <button
        className="lab-dialog__mobile-close-button lab-dialog__mobile-close-button--message"
        onClick={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="lab-icon lab-icon--ChevronDown  "
        >
          <svg
            aria-hidden={true}
            className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
      <div
        className="lab-dialog__header lab-dialog__header--message"
      >
        <button
          className="lab-dialog__close-button"
          onClick={[Function]}
          tabIndex={2}
          type="button"
        >
          <span
            className="lab-icon lab-icon--Dismiss  lab-dialog__close-button-icon"
          >
            <svg
              aria-hidden={true}
              className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="lab-dialog__icon-wrapper"
      >
        <span
          className="lab-icon lab-icon--StackStar  lab-dialog__icon"
        >
          <svg
            aria-hidden={true}
            className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 4.75c.19 0 .36.1.44.27l.88 1.68 1.74.2a.5.5 0 0 1 .25.9l-1.25 1 .43 1.84a.5.5 0 0 1-.75.54L8 10.14l-1.74 1.04a.5.5 0 0 1-.75-.54l.43-1.85-1.25-1a.5.5 0 0 1 .25-.88l1.74-.21.88-1.68A.5.5 0 0 1 8 4.75ZM2 5c0-1.1.9-2 2-2h8a2 2 0 0 1 2 2v6a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5Zm2-1a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H4Zm2 11a2 2 0 0 1-1.73-1H12a3 3 0 0 0 3-3V5.27c.6.34 1 .99 1 1.73v4a4 4 0 0 1-4 4H6Zm2 2a2 2 0 0 1-1.73-1H12a5 5 0 0 0 5-5V7.27c.6.34 1 .99 1 1.73v2a6 6 0 0 1-6 6H8Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        className="lab-dialog__title lab-dialog__title--message"
      >
        Sample Message Dialog
      </div>
      <div
        className="lab-dialog__body lab-dialog__body--message"
      >
        This is the main content of a Message Dialog. You may want to put as much content as you want, as long as it's a string.
      </div>
      <div
        className="lab-dialog__footer lab-dialog__footer--message"
      >
        <button
          className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal"
          onClick={[Function]}
          tabIndex={3}
          type="button"
        >
          Optional button
        </button>
        <button
          className="lab-btn lab-btn--default lab-btn--normal lab-btn--teal"
          onClick={[Function]}
          tabIndex={1}
          type="button"
        >
          Required button
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`MessageDialog rendering with isModal false 1`] = `
<div
  className="lab-dialog lab-dialog--message
             lab-dialog--large"
>
  <div
    aria-modal="true"
    className="lab-dialog__content lab-dialog__content--message"
    role="dialog"
  >
    <button
      className="lab-dialog__mobile-close-button lab-dialog__mobile-close-button--message"
      onClick={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span
        className="lab-icon lab-icon--ChevronDown  "
      >
        <svg
          aria-hidden={true}
          className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <div
      className="lab-dialog__header lab-dialog__header--message"
    >
      <button
        className="lab-dialog__close-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="lab-icon lab-icon--Dismiss  lab-dialog__close-button-icon"
        >
          <svg
            aria-hidden={true}
            className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m4.09 4.22.06-.07a.5.5 0 0 1 .63-.06l.07.06L10 9.29l5.15-5.14a.5.5 0 0 1 .63-.06l.07.06c.18.17.2.44.06.63l-.06.07L10.71 10l5.14 5.15c.18.17.2.44.06.63l-.06.07a.5.5 0 0 1-.63.06l-.07-.06L10 10.71l-5.15 5.14a.5.5 0 0 1-.63.06l-.07-.06a.5.5 0 0 1-.06-.63l.06-.07L9.29 10 4.15 4.85a.5.5 0 0 1-.06-.63l.06-.07-.06.07Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      className="lab-dialog__icon-wrapper"
    >
      <span
        className="lab-icon lab-icon--StackStar  lab-dialog__icon"
      >
        <svg
          aria-hidden={true}
          className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4.75c.19 0 .36.1.44.27l.88 1.68 1.74.2a.5.5 0 0 1 .25.9l-1.25 1 .43 1.84a.5.5 0 0 1-.75.54L8 10.14l-1.74 1.04a.5.5 0 0 1-.75-.54l.43-1.85-1.25-1a.5.5 0 0 1 .25-.88l1.74-.21.88-1.68A.5.5 0 0 1 8 4.75ZM2 5c0-1.1.9-2 2-2h8a2 2 0 0 1 2 2v6a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5Zm2-1a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H4Zm2 11a2 2 0 0 1-1.73-1H12a3 3 0 0 0 3-3V5.27c.6.34 1 .99 1 1.73v4a4 4 0 0 1-4 4H6Zm2 2a2 2 0 0 1-1.73-1H12a5 5 0 0 0 5-5V7.27c.6.34 1 .99 1 1.73v2a6 6 0 0 1-6 6H8Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
    <div
      className="lab-dialog__title lab-dialog__title--message"
    >
      Sample Message Dialog
    </div>
    <div
      className="lab-dialog__body lab-dialog__body--message"
    >
      This is the main content of a Message Dialog. You may want to put as much content as you want, as long as it's a string.
    </div>
    <div
      className="lab-dialog__footer lab-dialog__footer--message"
    >
      <button
        className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal"
        onClick={[Function]}
        type="button"
      >
        Optional button
      </button>
      <button
        className="lab-btn lab-btn--default lab-btn--normal lab-btn--teal"
        onClick={[Function]}
        type="button"
      >
        Required button
      </button>
    </div>
  </div>
</div>
`;

exports[`MessageDialog rendering with isOpen false 1`] = `null`;
